--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
         <header>
             <h1>Discover hidden places in the world around you</h1>
             <a href="#">Download Excursion (Coming soon!)</a>
-            <p><video src="/Users/pmac/desktop/excursion/resources/videos/excursion.mp4"></video></p>
+            <p>
+                <video autoplay muted> 
+                    <source src="/Users/pmac/desktop/excursion/resources/videos/excursion.mp4" type="video/mp4">
+                        stuff>
+                </video>
+            </p>
         </header>
         <main>
             <h2>Your personal travel guide</h2>
@@ -20,5 +25,8 @@
             <h2>Coming Soon for iPhone and Android</h2>
             <a href="#">Download Excursion (Coming soon!)</a>
         </main>
+        <footer>
+            <p>© Excursion</p>
+        </footer>
     </body>
 </html>
