changed image path

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">      
-        <link rel="stylesheet" href="/Users/pmac/Desktop/excursion/css/style.css" type="text/css">
+        <link rel="stylesheet" href="css/style.css" type="text/css">
         <title>Excursion</title>
     </head>
     <body>
@@ -12,7 +12,7 @@
             <a href="#">Download Excursion (Coming soon!)</a>
             <p>
                 <video autoplay muted> 
-                    <source src="/Users/pmac/desktop/excursion/resources/videos/excursion.mp4" type="video/mp4">
+                    <source src="resources/videos/excursion.mp4" type="video/mp4">
                         stuff>
                 </video>
             </p>
@@ -20,8 +20,8 @@
         <main>
             <h2>Your personal travel guide</h2>
             <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-            <p><img src="/Users/pmac/desktop/excursion/resources/images/camp.jpg" alt="Camp Fire"></p>
-            <p><img src="/Users/pmac/desktop/excursion/resources/images/phone.png" alt="Cellphone Icon"></p>
+            <p><img src="resources/images/camp.jpg" alt="Camp Fire"></p>
+            <p><img src="resources/images/phone.png" alt="Cellphone Icon"></p>
             <h2>Coming Soon for iPhone and Android</h2>
             <a href="#">Download Excursion (Coming soon!)</a>
         </main>
